<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_action_sort"
        android:icon="@drawable/ic_sort_by_alpha"
        android:orderInCategory="1"
        android:title="@string/sort_alphabetically"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_action_grid_one"
        android:icon="@drawable/ic_grid_one"
        android:orderInCategory="2"
        android:title="@string/menu_item_action_grid_one"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_action_grid_two"
        android:icon="@drawable/ic_grid_two"
        android:orderInCategory="3"
        android:title="@string/menu_item_action_grid_two"
        android:visible="false"
        app:showAsAction="always" />
</menu>