<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/palette_grey_light"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="uk.lobsterdoodle.namepicker.overview.OverviewActivityFragment">


    <RelativeLayout
        android:id="@+id/add_group_group_name_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_group_group_name_input_label"
            style="@style/AppText.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/add_group_input_label_name"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:layout_below="@+id/add_group_group_name_input_label"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_group_group_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_group_group_name_input_hint"
                tools:text="The Android Team"/>

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/add_group_name_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_group_group_name_input_layout">

        <TextView
            android:id="@+id/add_group_name_list_label"
            style="@style/AppText.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/add_group_label_names"/>

        <Button
            android:id="@+id/add_group_button_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/add_group_name_list_label"
            android:layout_alignBottom="@+id/add_group_name_list_label"
            android:layout_alignParentRight="true"
            android:text="@string/add_group_button_add_name"
            tools:ignore="RtlHardcoded"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_group_name_list_label"
            android:paddingLeft="4dp"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_group_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_group_name_input_hint"
                tools:text="Sebastian"/>

        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_group_name_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_group_done_button"
        android:layout_below="@id/add_group_name_input_layout"/>

    <Button
        android:id="@+id/add_group_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_group_button_done"
        tools:ignore="RtlHardcoded"/>

</RelativeLayout>