<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/edit_names_root_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_grey"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:id="@+id/edit_group_name_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/edit_group_name_list_label"
            style="@style/AppText.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/add_group_label_names"/>

        <Button
            android:id="@+id/edit_group_names_button_add_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edit_group_input_layout"
            android:layout_alignParentRight="true"
            android:text="@string/add_group_button_add_name"
            tools:ignore="RtlHardcoded"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_group_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_group_name_list_label"
            android:layout_toLeftOf="@+id/edit_group_names_button_add_name"
            android:paddingLeft="4dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_group_names_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_group_name_input_hint"
                tools:text="Sebastian"/>

        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_group_names_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_group_names_done_button"
        android:layout_below="@id/edit_group_name_input_layout"/>

    <Button
        android:id="@+id/edit_group_names_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add_group_button_done"
        tools:ignore="RtlHardcoded"/>

</RelativeLayout>